--- a/trunk/assets/css/base-site.css
+++ b/trunk/assets/css/base-site.css
@@ -105,3 +105,12 @@
 .modal-body {
     min-height: inherit !important;
 }
+
+#notification-wrapper {
+    width: 40%;
+    margin: 20px auto;
+}
+
+#notification-wrapper .alert {
+    padding: 7px;
+}
